# ArduinuxProjectTemplate

./: .gitmodules  ArduinoProject.cmake  CMakeFuncs.cmake  CMakeLists.txt  CMakeLists2.txt
src/: UserFiles.cmake  arduino_sketch.cpp  main.c
